--- a/config/database.yml
+++ b/config/database.yml
@@ -8,15 +8,15 @@ default: &default
 
 development:
   <<: *default
-  database: chat-space_development
+  database: deploy_rp_development
 
 test:
   <<: *default
-  database: chat-space_test
+  database: deploy_rp_test
 
 production:
   <<: *default
-  database: chat-space_production
+  database: deploy_rp_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
