--- a/config/database.yml
+++ b/config/database.yml
@@ -19,3 +19,4 @@ production:
   database: deploy_rp_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
